# safety-observability-runtime

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: runtime.yaml
docs/huggingface_model_cards/: safety-fasttext-router.md  safety-moderation-2head-onnx-int8.md  safety-moderation-2head.md  safety-prompt-injection-onnx-int8.md  safety-prompt-injection.md
safety_observability/: __init__.py  cli.py  constants.py  deterministic.py  download.py  fasttext_router.py  models.py  normalize.py  pipeline.py
safety_observability_slim/: __init__.py  classifier.py  cli.py  config.py  download.py  models.py
scripts/: benchmark_cpu_settings.py  calibrate_pytorch_gpu_thresholds.py  calibrate_quantized_thresholds.py  calibrate_temperature.py  check_jbb_coverage.py  classify.py  compare_moderation_candidate.py  diagnose_batching.py  diagnose_components.py  download_models.py  eval_full_pipeline.py  eval_moderation_breakdown.py  evaluate_pytorch_gpu_suite.py  evaluate_quantized_full_suite.py  evaluate_runtime_layer.py  evaluate_scope_hf.py  export_gpu_onnx_fp16.py  import_router_thresholds.py  model_bakeoff.py  quantize_moderation.py  run_eval.py  setup.sh
tests/: test_runtime_light.py
