[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-observability-runtime"
version = "0.1.0"
description = "Local safety observability classifier runtime with FastText routing and BERT confirmers."
requires-python = ">=3.10"
dependencies = [
  "fasttext-wheel>=0.9.2",
  "huggingface_hub>=0.30.0",
  "pydantic>=2",
  "pyyaml>=6",
  "safetensors>=0.5.0",
  "torch>=2.2",
  "transformers>=4.52.0",
]

[project.scripts]
safety-observe = "safety_observability.cli:main"

[tool.setuptools.packages.find]
include = ["safety_observability*"]
